initial runner plugin
fix library plugin to work with project dependencies